Icon updates and preparing publishing

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,5 @@
 <footer id="colophon" class="site-footer" role="contentinfo">
   <div class="site-footer__copy site-copy">
+    {{ .Site.Copyright | markdownify }}
   </div>
 </footer>
