Update dark theme

--- a/assets/scss/amazon.scss
+++ b/assets/scss/amazon.scss
@@ -28,7 +28,7 @@
   border-right: 1px solid #e1e8ed;
   border-bottom: 1px solid #e1e8ed;
   border-left: 1px solid #e1e8ed;
-  padding: 5px 10px 10px 10px;
+  padding: 5px 10px 10px;
 }
 
 .amazon-widget:hover .amazon-widget-info {
