--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,13 +31,8 @@
       <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}" crossorigin="anonymous" media="screen" />
     {{ end }}
 
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-    <script>
-  function addDarkmodeWidget() {
-    new Darkmode().showWidget();
-  }
-  window.addEventListener('load', addDarkmodeWidget);
-</script>
+    {{ $js := resources.Get "js/index.js" | js.Build | resources.Minify }}
+    <script type="text/javascript" src="{{ $js.RelPermalink }}" defer></script>
 
     {{ partial "analytics.html" . }}
 </head>
