--- a/assets/scss/singular.scss
+++ b/assets/scss/singular.scss
@@ -25,6 +25,7 @@ $color__info: #00b9f2;
 $color__warning: #f4cc31;
 $color__danger: #e83337;
 
+// Darkmode
 $color--darkmode__background-body: #000;
 $color--darkmode__ligitgray: #373737;
 $color--darkmode__gray: #a7a7a7;
@@ -37,16 +38,13 @@ $color--darkmode__gray: #a7a7a7;
 *::before,
 *::after {
   box-sizing: inherit;
-  box-sizing: inherit;
 }
 
 html {
   box-sizing: border-box;
-  box-sizing: border-box;
   height: 100%;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
-  text-size-adjust: 100%;
   text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
 }
@@ -367,7 +365,6 @@ a {
   color: $color__text-light;
   text-decoration: none;
   transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
 }
 
 a:hover,
@@ -533,7 +530,6 @@ input[type="submit"] {
   cursor: pointer;
   appearance: none;
   touch-action: manipulation;
-  touch-action: manipulation;
 }
 
 .btn:hover,
@@ -541,7 +537,6 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-  box-shadow: inset 0 0 108px rgb(255, 255, 255 / 50%);
   box-shadow: inset 0 0 108px rgb(255, 255, 255 / 50%);
   text-decoration: none;
 }
@@ -553,7 +548,6 @@ input[type="reset"]:active,
 input[type="submit"]:active {
   outline: 0;
   box-shadow: inset 0 0 108px rgb(255, 255, 255 / 50%);
-  box-shadow: inset 0 0 108px rgb(255, 255, 255 / 50%);
   text-decoration: none;
 }
 
@@ -564,7 +558,6 @@ input[type="reset"]:focus,
 input[type="submit"]:focus {
   outline: thin dotted;
   outline-offset: -2px;
-  box-shadow: inset 0 0 108px rgb(255, 255, 255 / 20%);
   box-shadow: inset 0 0 108px rgb(255, 255, 255 / 20%);
   text-decoration: none;
 }
@@ -621,7 +614,6 @@ textarea {
   border-color: $color__gray;
   background-color: transparent;
   box-shadow: none;
-  box-shadow: none;
   color: $color__text;
   vertical-align: middle;
   font-size: 1rem;
@@ -646,13 +638,6 @@ textarea:focus {
   outline: 0;
   border-color: $color__accent;
   box-shadow: none;
-  box-shadow: none;
-}
-
-::input-placeholder {
-  color: $color__text;
-  text-overflow: ellipsis;
-  opacity: 0.5;
 }
 
 ::placeholder {
@@ -667,25 +652,11 @@ textarea:focus {
   opacity: 0.5;
 }
 
-input:input-placeholder {
-  color: $color__text;
-  text-overflow: ellipsis;
-  opacity: 0.5;
-}
-
-:focus::input-placeholder {
-  color: transparent;
-}
-
 :focus::placeholder {
   color: transparent;
 }
 
 :focus:placeholder {
-  color: transparent;
-}
-
-input:focus:input-placeholder {
   color: transparent;
 }
 
@@ -732,7 +703,6 @@ img {
 /* Lines */
 
 hr {
-  box-sizing: content-box;
   box-sizing: content-box;
   margin-top: -2px;
   margin-bottom: 1.5rem;
@@ -878,7 +848,6 @@ p > video {
 .site-branding__logo {
   -webkit-box-flex: 0;
   flex: 0 0 auto;
-  flex: 0 0 auto;
   margin-right: 0.5rem;
 }
 
@@ -894,7 +863,6 @@ a.custom-logo-link img {
 
 a.custom-logo-link:focus {
   outline: none;
-  box-shadow: 0 0 0 2px $color__accent;
   box-shadow: 0 0 0 2px $color__accent;
 }
 
@@ -919,15 +887,15 @@ a.custom-logo-link:focus {
   background-repeat: repeat-x;
   color: $color__headings;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
 .site-title a:hover,
 .site-title a:focus {
   outline: 0;
-  background-image: -webkit-gradient(linear, left top, right top, from($color__accent), to($color__accent));
   background-image: linear-gradient(to right, $color__accent 0%, $color__accent 100%);
   background-size: 100% 4px;
   color: $color__accent;
@@ -970,7 +938,6 @@ a.custom-logo-link:focus {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  flex-direction: column;
   flex-direction: column;
   padding: 4rem 3rem 2rem;
   font-size: 0.88em;
@@ -1017,22 +984,21 @@ a.custom-logo-link:focus {
 }
 
 .site-copy a {
-  background-image: -webkit-gradient(linear, left top, right top, from($color__text-light)), to($color__text-light);
   background-image: linear-gradient(to right, $color__text-light) 0%, $color__text-light 100%;
   background-position: bottom 0 center;
   background-size: 100% 2px;
   background-repeat: repeat-x;
   color: $color__text-light;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
 .site-copy a:hover,
 .site-copy a:focus {
   outline: 0;
-  background-image: -webkit-gradient(linear, left top, right top, from($color__accent), to($color__accent));
   background-image: linear-gradient(to right, $color__accent 0%, $color__accent 100%);
   background-size: 100% 4px;
   color: $color__accent;
@@ -1086,7 +1052,6 @@ a.custom-logo-link:focus {
   padding: 0.375rem 0.75rem;
   width: 100%;
   box-shadow: 0 0 0 1px $color__gray;
-  box-shadow: 0 0 0 1px $color__gray;
   color: $color__text;
 }
 
@@ -1097,7 +1062,6 @@ a.custom-logo-link:focus {
 .primary-menu__list-item a:focus {
   outline: 0;
   outline-offset: 0;
-  box-shadow: 0 0 0 2px $color__accent;
   box-shadow: 0 0 0 2px $color__accent;
   color: $color__accent;
 }
@@ -1113,11 +1077,9 @@ button.sub-menu-toggle {
   font-size: 16px;
   line-height: 1.5;
   transition: 0.2s ease-in-out;
-  transition: 0.2s ease-in-out;
 }
 
 button.sub-menu-toggle:hover {
-  box-shadow: none;
   box-shadow: none;
   color: $color__accent;
 }
@@ -1126,12 +1088,10 @@ button.sub-menu-toggle:focus {
   outline: none;
   background-color: $color__background-body;
   box-shadow: 0 0 0 2px $color__accent;
-  box-shadow: 0 0 0 2px $color__accent;
   color: $color__accent;
 }
 
 .sub-menu-toggle--expanded .primary-menu__arrow-down {
-  transform: rotate(180deg);
   transform: rotate(180deg);
 }
 
@@ -1161,7 +1121,6 @@ button.sub-menu-toggle:focus {
   outline: 0;
   border: 1px solid $color__accent;
   box-shadow: none;
-  box-shadow: none;
   color: $color__accent;
 }
 
@@ -1189,7 +1148,6 @@ button.sub-menu-toggle:focus {
   display: box;
   display: flexbox;
   display: flex;
-  flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -1450,14 +1408,11 @@ a.pagination__item:focus {
 .widget.jetpack_subscription_widget form {
   display: box;
   display: flexbox;
-  display: flex;
-  flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
 .widget.jetpack_subscription_widget #subscribe-text {
   -webkit-box-flex: 0;
-  flex: 0 0 100%;
   flex: 0 0 100%;
   margin-top: -0.5rem;
 }
@@ -1615,15 +1570,15 @@ a.pagination__item:focus {
 }
 
 .entry-meta-before-title .entry-meta-item.cat-links a {
-  background-image: -webkit-gradient(linear, left top, right top, from($color__accent), to($color__accent));
   background-image: linear-gradient(to right, $color__accent 0%, $color__accent 100%);
   background-position: bottom 0 center;
   background-size: 100% 2px;
   background-repeat: repeat-x;
   color: $color__accent;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
@@ -1642,7 +1597,6 @@ a.pagination__item:focus {
 
 .entry-author .author-avatar {
   -webkit-box-flex: 0;
-  flex: 0 0 1.5em;
   flex: 0 0 1.5em;
   margin: 0 0.75em 1.5em 0;
   width: 1.5em;
@@ -1678,8 +1632,9 @@ a.pagination__item:focus {
   background-repeat: repeat-x;
   color: $color__accent;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
@@ -1767,8 +1722,9 @@ a.pagination__item:focus {
   background-repeat: repeat-x;
   color: $color__accent;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
@@ -1827,9 +1783,10 @@ a.pagination__item:focus {
   background-repeat: repeat-x;
   color: $color__accent;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
+  /* stylelint-enable max-line-length */
   word-wrap: break-word;
-  transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
@@ -1919,8 +1876,9 @@ a.pagination__item:focus {
   background-repeat: repeat-x;
   color: $color__accent;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
@@ -2020,8 +1978,9 @@ a.pagination__item:focus {
   background-repeat: repeat-x;
   color: $color__accent;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
@@ -2044,8 +2003,9 @@ a.pagination__item:focus {
   background-repeat: repeat-x;
   color: $color__accent;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
@@ -2097,8 +2057,9 @@ a.pagination__item:focus {
   background-repeat: repeat-x;
   color: $color__accent;
   text-decoration: none;
+  /* stylelint-disable max-line-length */
   text-shadow: 0.05em 0 0 $color__background-body, -0.05em 0 0 $color__background-body, 0 0.05em 0 $color__background-body, 0 -0.05em 0 $color__background-body, 0.1em 0 0 $color__background-body, -0.1em 0 0 $color__background-body, 0 0.1em 0 $color__background-body, 0 -0.1em 0 $color__background-body;
-  transition: all 0.2s ease-in-out;
+  /* stylelint-enable max-line-length */
   transition: all 0.2s ease-in-out;
 }
 
@@ -2224,7 +2185,6 @@ a.pagination__item:focus {
   display: flexbox;
   display: flex;
   flex-wrap: wrap;
-  flex-wrap: wrap;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
@@ -2279,7 +2239,6 @@ a.pagination__item:focus {
   -ms-flex-align: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  flex-direction: column;
   flex-direction: column;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -2461,14 +2420,12 @@ input[type="submit"].wpcf7-submit {
   display: flexbox;
   display: flex;
   flex-wrap: wrap;
-  flex-wrap: wrap;
   padding: 2.5em 2.25em;
   background-color: $color__gray;
 }
 
 .integer-subscribe-form-intro {
   -webkit-box-flex: 0;
-  flex: 0 0 100%;
   flex: 0 0 100%;
   margin-top: -0.5rem;
 }
@@ -2554,11 +2511,8 @@ input[type="submit"].wpcf7-submit {
     width: 100%;
     background-color: $color__background-body;
     box-shadow: 0 0 3px $color__gray;
-    box-shadow: 0 0 3px $color__gray;
     opacity: 1;
     transition: 0.2s ease-in-out;
-    transition: 0.2s ease-in-out;
-    transform: translateY(0);
     transform: translateY(0);
   }
 
@@ -2578,10 +2532,7 @@ input[type="submit"].wpcf7-submit {
     -ms-flex-align: center;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    flex-direction: row;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
@@ -2599,7 +2550,6 @@ input[type="submit"].wpcf7-submit {
     display: box;
     display: flexbox;
     display: flex;
-    flex-wrap: wrap;
     flex-wrap: wrap;
   }
 
@@ -2622,7 +2572,6 @@ input[type="submit"].wpcf7-submit {
     display: box;
     display: flexbox;
     display: flex;
-    flex-wrap: wrap;
     flex-wrap: wrap;
     -webkit-box-pack: end;
     -ms-flex-pack: end;
@@ -2657,7 +2606,6 @@ input[type="submit"].wpcf7-submit {
   .primary-menu__list-item a {
     margin-bottom: 0;
     box-shadow: none;
-    box-shadow: none;
   }
 
   button.sub-menu-toggle {
@@ -2667,11 +2615,9 @@ input[type="submit"].wpcf7-submit {
 
   .sub-menu .primary-menu__arrow-down {
     transform: rotate(-90deg);
-    transform: rotate(-90deg);
   }
 
   .sub-menu .sub-menu-toggle--expanded .primary-menu__arrow-down {
-    transform: rotate(90deg);
     transform: rotate(90deg);
   }
 
@@ -2729,7 +2675,6 @@ input[type="submit"].wpcf7-submit {
 
   .entry-author .author-avatar {
     -webkit-box-flex: 0;
-    flex: 0 0 3em;
     flex: 0 0 3em;
     margin-right: 1.5em;
     width: 3em;
@@ -2860,8 +2805,7 @@ input[type="submit"].wpcf7-submit {
   .posts__wrap--grid {
     grid-template-columns: 1fr 1fr;
     max-width: 1140px;
-    grid-column-gap: 3rem;
-    grid-row-gap: 8rem;
+    grid-gap: 3rem 8rem;
   }
 
   .posts__pagination {
